fix weird text sizes for landscape on mobile

--- a/room.css
+++ b/room.css
@@ -1,3 +1,8 @@
+@media (orientation: landscape) {
+  html {
+    -webkit-text-size-adjust: 100%; /* Prevent font scaling in landscape while allowing user zoom */
+  }
+}
 body{
   background-color:#fafafa;
   color:#3c3c3c;
